# unify-events

./: .bowerrc  .eslintrc.json  .gitignore  .gitmodules  CONTRIBUTING.md  NOTES.md  README.html  README.md  app_version.templ.py  bower.json  config.codekit  config.rb  events_urls.py  gulp-config.template.json  gulpfile.js  newrelic.templ.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.py  settings_events.py  settings_local.templ.py  src alias  urls.py  util.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apache/: python.templ.wsgi  python.wsgi  vhost.conf
apps/core/: context_processors.py  forms.py  middleware.py  models.py  signals.py  utils.py  views.py
apps/events/: admin.py  auth.py  fields.py  functions.py  middleware.py  models.py  search_indexes.py  signals.py  tests.py  utils.py
apps/profiles/: admin.py  forms.py  models.py  urls.py  views.py
apps/unlevents/: models.py
core/: context_processors.py  middleware.py  models.py  saml_hooks.py  storage_backends.py  views.py
core/templatetags/: core_tags.py
doc/: INSTALL
events/: admin.py  auth.py  fields.py  functions.py  utils.py
events/forms/: fields.py  (+2 more)
logs/: __init__.py
profiles/: forms.py  models.py  urls.py  views.py
seo/: __init__.py  admin.py  apps.py  models.py  signals.py  util.py
src/: .gitignore  scrobblerqueue.txt  settings.py  settings_local.templ.py  unify-events.wsgi  urls.py  util.py
templates/: 404.html  500.html  base.html  full-header-base.html  robots.prod.txt
unlevents/: models.py
(+524 files in other folders)
