[project]
name = "unify-events"
version = "2.6.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "asgiref>=3.3.2",
    "beautifulsoup4==4.9.1",
    "bleach==3.3.0",
    "certifi==2020.6.20",
    "chardet==3.0.4",
    "charset-normalizer==2.0.12",
    "clearcache-python==0.0.8",
    "django-appconf==1.0.4",
    "django==3.2.25",
    "django-bleach==0.6.1",
    "django-compressor==2.4",
    "django-filter==2.4.0",
    "django-taggit==1.3.0",
    "django-widget-tweaks==1.4.8",
    "gunicorn==21.2.0",
    "html2text==2020.1.16",
    "html5lib==1.1",
    "idna==2.10",
    "lorem==0.1.1",
    "mysqlclient>=2.2.7",
    "packaging==20.4",
    "pillow==9.2.0",
    "pyasn1==0.4.8",
    "pyasn1-modules==0.2.8",
    "pyparsing==2.4.7",
    "python-dateutil==2.8.1",
    "python-ldap==3.4.0",
    "pytz==2020.1",
    "rcssmin==1.0.6",
    "requests==2.27.1",
    "rjsmin==1.1.0",
    "simplejson==3.17.2",
    "six==1.15.0",
    "soupsieve==2.0.1",
    "sqlparse==0.3.1",
    "unidecode==1.1.1",
    "urllib3==1.26.5",
    "webencodings==0.5.1",
    "pysaml2>=7.3.1",
    "django-saml2-auth-ai>=2.1.6",
]
